--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
 alabaster==0.7.12
 alembic==1.0.10
 altgraph==0.16.1
+anaconda-client==1.7.2
+anaconda-navigator==1.9.7
+anaconda-project==0.8.2
 aniso8601==6.0.0
 apispec==1.3.3
 appnope==0.1.0
@@ -34,8 +37,12 @@ cffi==1.12.2
 chardet==3.0.4
 Click==7.0
 cloudpickle==0.8.0
+clyent==1.2.2
 colorama==0.4.1
 colorhash==1.0.2
+conda==4.6.14
+conda-build==3.17.8
+conda-verify==3.1.1
 configparser==3.7.4
 contextlib2==0.5.5
 cryptography==2.6.1
@@ -54,7 +61,7 @@ Faker==0.7.12
 fastcache==1.0.2
 fbs==0.8.2
 filelock==3.0.10
-Flask==1.0.2
+Flask==1.1.1
 Flask-Bcrypt==0.7.1
 Flask-Bootstrap==3.3.7.1
 Flask-Caching==1.8.0
@@ -71,11 +78,12 @@ flask-marshmallow==0.10.1
 Flask-Migrate==2.4.0
 Flask-MonitoringDashboard==2.1.4
 flask-profiler==1.8.1
+flask-rest-paginate==0.1.3
 Flask-RESTful==0.3.7
 flask-restplus==0.12.1
 flask-restplus-marshmallow==0.2.20
 Flask-Script==2.0.6
-Flask-SQLAlchemy==2.3.2
+Flask-SQLAlchemy==2.4.1
 Flask-Testing==0.7.1
 Flask-WTF==0.14.2
 Frozen-Flask==0.15
@@ -92,11 +100,15 @@ idna==2.8
 imageio==2.5.0
 imagesize==1.1.0
 importlib-metadata==0.0.0
+ipykernel==5.1.0
+ipython==7.4.0
+ipython-genutils==0.2.0
+ipywidgets==7.4.2
 isort==4.3.16
 itsdangerous==1.1.0
 jdcal==1.4
 jedi==0.13.3
-Jinja2==2.10
+Jinja2==2.11.1
 jmespath==0.9.4
 jsonschema==3.0.1
 jupyter==1.0.0
@@ -105,7 +117,6 @@ jupyter-console==6.0.0
 jupyter-core==4.4.0
 jupyterlab==0.35.4
 jupyterlab-server==0.2.0
-jwt==0.6.1
 keyring==18.0.0
 kiwisolver==1.0.1
 lazy-object-proxy==1.3.1
@@ -119,7 +130,7 @@ macholib==1.11
 Mako==1.0.9
 MarkupSafe==1.1.1
 marshmallow==2.19.2
-marshmallow-sqlalchemy==0.16.3
+marshmallow-sqlalchemy==0.22.3
 matplotlib==3.0.3
 mccabe==0.6.1
 mistune==0.8.4
@@ -178,11 +189,17 @@ pydocstyle==3.0.0
 pyflakes==2.1.1
 Pygments==2.3.1
 PyInstaller==3.4
-PyJWT==1.4.2
+PyJWT==1.7.1
 pylint==2.3.1
 pyodbc==4.0.26
 pyOpenSSL==19.0.0
 pyparsing==2.3.1
+PyQRCode==1.2.1
+PyQt5==5.12.2
+PyQt5-sip==4.19.17
+pyrsistent==0.14.11
+PySide2==5.12.3
+PySocks==1.6.8
 pytest==4.3.1
 pytest-arraydiff==0.3
 pytest-astropy==0.5.0
@@ -198,12 +215,44 @@ pytz==2018.9
 PyWavelets==1.0.2
 PyYAML==5.1
 pyzmq==18.0.0
+QtAwesome==0.5.7
+qtconsole==4.4.3
+QtPy==1.7.0
 query-string==2019.4.13
 querystring-parser==1.2.3
 request==2019.4.13
 requests==2.21.0
 rope==0.12.0
 rsa==3.4.2
+ruamel-yaml==0.15.46
+s3transfer==0.3.3
+scikit-image==0.14.2
+scikit-learn==0.20.3
+scipy==1.2.1
+seaborn==0.9.0
+Send2Trash==1.5.0
+shiboken2==5.12.3
+simplegeneric==0.8.1
+simplejson==3.16.0
+singledispatch==3.4.0.3
+six==1.12.0
+snowballstemmer==1.2.1
+sortedcollections==1.1.2
+sortedcontainers==2.1.0
+soupsieve==1.8
+Sphinx==1.8.5
+sphinxcontrib-websupport==1.1.0
+spyder==3.3.3
+spyder-kernels==0.4.2
+SQLAlchemy==1.3.15
+sqlalchemy-datatables==2.0.1
+statsmodels==0.9.0
+sympy==1.3
+tables==3.5.1
+tblib==1.3.2
+terminado==0.8.1
+testpath==0.4.2
+toolz==0.9.0
 tornado==6.0.2
 tqdm==4.31.1
 traitlets==4.3.2
@@ -216,7 +265,15 @@ visitor==0.1.3
 wcwidth==0.1.7
 webargs==5.3.1
 webencodings==0.5.1
-Werkzeug==0.14.1
+Werkzeug==0.16.1
+widgetsnbextension==3.4.2
 wrapt==1.11.1
 WTForms==2.2.1
+wurlitzer==1.0.2
+xlrd==1.2.0
+XlsxWriter==1.1.5
+xlwings==0.15.4
+xlwt==1.3.0
+yapf==0.27.0
+zict==0.1.4
 zipp==0.3.3
