--- a/requirements.txt
+++ b/requirements.txt
@@ -31,19 +31,23 @@ bokeh==1.0.4
 Bootstrap-Flask==1.0.10
 boto==2.49.0
 botocore==1.15.1
+Bottleneck==1.2.1
+bs4==0.0.1
 certifi==2019.3.9
 cffi==1.12.2
 chardet==3.0.4
 Click==7.0
 cloudpickle==0.8.0
 clyent==1.2.2
-colorama==0.4.1
+colorama==0.3.9
 colorhash==1.0.2
 conda==4.6.14
 conda-build==3.17.8
 conda-verify==3.1.1
+configobj==5.0.6
 configparser==3.7.4
 contextlib2==0.5.5
+coverage==5.0.4
 cryptography==2.6.1
 cycler==0.10.0
 Cython==0.29.6
@@ -66,6 +70,7 @@ Flask-Bootstrap==3.3.7.1
 Flask-Caching==1.8.0
 Flask-CLI==0.4.0
 Flask-Cors==3.0.7
+flask-crontab==0.1.2
 Flask-DebugToolbar==0.10.1
 Flask-Ext==0.1
 Flask-Gravatar==0.5.0
@@ -74,8 +79,9 @@ Flask-Limiter==1.0.1
 Flask-Login==0.4.1
 Flask-Mail==0.9.1
 flask-marshmallow==0.10.1
+Flask-Matomo==1.2.0
 Flask-Migrate==2.4.0
-Flask-MonitoringDashboard==2.1.4
+Flask-MonitoringDashboard==3.0.9
 flask-profiler==1.8.1
 flask-rest-paginate==0.1.3
 Flask-RESTful==0.3.7
@@ -85,6 +91,7 @@ Flask-Script==2.0.6
 Flask-SQLAlchemy==2.4.1
 Flask-Testing==0.7.1
 Flask-WTF==0.14.2
+Flask-Zipkin==0.0.4
 Frozen-Flask==0.15
 future==0.17.1
 get==2019.4.13
@@ -156,6 +163,7 @@ openpyxl==2.6.1
 packaging==19.0
 pandas==0.24.2
 pandocfilters==1.4.2
+paramiko==2.7.1
 parso==0.3.4
 partd==0.3.10
 passlib==1.7.1
@@ -178,18 +186,22 @@ psycopg2-binary==2.8.3
 ptyprocess==0.6.0
 public==2019.4.13
 py==1.8.0
+py-zipkin==0.20.0
 pyasn1==0.4.8
 pycodestyle==2.5.0
 pycosat==0.6.3
 pycparser==2.19
 pycrypto==2.6.1
+pycryptodomex==3.9.7
 pycurl==7.43.0.2
 pydocstyle==3.0.0
+pyfiglet==0.7.5
 pyflakes==2.1.1
 Pygments==2.3.1
 PyInstaller==3.4
 PyJWT==1.7.1
 pylint==2.3.1
+PyNaCl==1.3.0
 pyodbc==4.0.26
 pyOpenSSL==19.0.0
 pyparsing==2.3.1
@@ -198,6 +210,8 @@ PyQt5==5.12.2
 PyQt5-sip==4.19.17
 pyrsistent==0.14.11
 PySide2==5.12.3
+pysmi==0.3.4
+pysnmp==4.4.12
 PySocks==1.6.8
 pytest==4.3.1
 pytest-arraydiff==0.3
@@ -221,6 +235,7 @@ query-string==2019.4.13
 querystring-parser==1.2.3
 request==2019.4.13
 requests==2.21.0
+requests-futures==1.0.0
 rope==0.12.0
 rsa==3.4.2
 ruamel-yaml==0.15.46
@@ -229,7 +244,9 @@ scikit-image==0.14.2
 scikit-learn==0.20.3
 scipy==1.2.1
 seaborn==0.9.0
+selenium==3.141.0
 Send2Trash==1.5.0
+sentry-sdk==0.14.3
 shiboken2==5.12.3
 simplegeneric==0.8.1
 simplejson==3.16.0
@@ -246,13 +263,18 @@ spyder-kernels==0.4.2
 SQLAlchemy==1.3.15
 sqlalchemy-datatables==2.0.1
 statsmodels==0.9.0
+stem==1.8.0
 sympy==1.3
 tables==3.5.1
 tblib==1.3.2
+termcolor==1.1.0
 terminado==0.8.1
+terminaltables==3.1.0
 testpath==0.4.2
+thriftpy2==0.4.11
 toolz==0.9.0
 tornado==6.0.2
+torrequest==0.1.0
 tqdm==4.31.1
 traitlets==4.3.2
 twilio==6.26.3
@@ -260,6 +282,7 @@ typed-ast==1.4.0
 tzlocal==1.5.1
 unicodecsv==0.14.1
 urllib3==1.24.1
+user-agent==0.1.9
 visitor==0.1.3
 wcwidth==0.1.7
 webargs==5.3.1
