Docker partial implementation

--- a/config.cfg
+++ b/config.cfg
@@ -19,5 +19,4 @@ DATABASE=postgresql://localhost/news
 
 [visualization]
 TIMEZONE=Europe/Amsterdam
-COLORS={'main':'[0,97,255]',
-        'static':'[255,153,0]'}
+COLORS={'main':'[0,97,255]','static':'[255,153,0]'}
