--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,12 +9,12 @@ services:
       STAGE: test
       SQLALCHEMY_DATABASE_URI: postgresql+psycopg2://test:test@db/test
     networks:
-      - default
+      - legacy
     ports:
-      - 5000:5000
+      - 5000:8000
     volumes:
-      - ./app:/app
-      - ./migrations:/migrations
+      - ./:/app
+      - ./migrations:/home/news/migrations
     restart: always
 
   db:
@@ -22,11 +22,15 @@ services:
       POSTGRES_USER: test
       POSTGRES_PASSWORD: test
       POSTGRES_DB: test
-    image: postgres:latest
+    image: postgres:11
     networks:
-      - default
+      - legacy
     ports:
-      - 5405:5432
+      - 5432:5432
     restart: always
     volumes:
       - ./postgres-data:/var/lib/postgresql/data
+
+networks:
+  new:
+  legacy:
