--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,7 +10,7 @@ build job:
     - apt-get install -y python3-dev python3-pip
     - pip3 install Flask gunicorn pytest pytest-cov
     - pytest tests --cov --cov-report term --cov-report html
-deploy job:
+tests job:
   stage: tests
   script:
     - python tests/basic.py
