--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,6 @@
 stages:
   - build
-  - tests
+  - test
 build job:
   stage: build
   script:
@@ -10,7 +10,7 @@ build job:
     - apt-get install -y python3-dev python3-pip
     - pip3 install Flask gunicorn pytest pytest-cov
     - pytest tests --cov --cov-report term --cov-report html
-tests job:
-  stage: tests
+test job:
+  stage: test
   script:
     - python tests/basic.py
