--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,7 +14,6 @@ verification:
 run_tests:
   stage: tests
   script:
-    - apk add postgresql-dev --no-cache
     - pip install psycopg2-binary
     - pip install -r requirements.txt
     - python tests/basic.py
@@ -22,6 +21,6 @@ run_tests:
 build:
   stage: build
   script:
-    - apk add postgresql-dev --no-cache
     - pip install psycopg2-binary
     - pip install -r requirements.txt
+    - docker-compose up --build
