--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,7 +12,7 @@ verification:
     - python --version
     - whoami
     
-run_tests:
+testing:
   stage: tests
   script:
     - pip install psycopg2-binary
@@ -25,7 +25,9 @@ run_tests:
 scanning:
   stage: tests
   image: docker:19.03.8
-  allow_failure: true
+  allow_failure: false
+  services:
+    - docker:19.03.8-dind
   script:
     - docker info
 
