added redis and rq

--- a/config.cfg
+++ b/config.cfg
@@ -15,7 +15,7 @@ SECURITY_TOKEN=cc83733cb0af8b884ff6577086b87909
 
 [database]
 TABLE_PREFIX=fmd
-DATABASE=postgresql+psycopg2://test:test@db/test
+DATABASE=postgresql://localhost/news
 
 [visualization]
 TIMEZONE=Europe/Amsterdam
