2FA authentication fixed and task queue bug fixes

--- a/config.cfg
+++ b/config.cfg
@@ -15,11 +15,7 @@ SECURITY_TOKEN=cc83733cb0af8b884ff6577086b87909
 
 [database]
 TABLE_PREFIX=fmd
-<<<<<<< HEAD
-DATABASE=postgresql://localhost/news
-=======
-DATABASE=postgresql+psycopg2://postgres:1234@localhost/news
->>>>>>> 18e140f2e5c2fdf22e9afdc4077627e5514a9259
+DATABASE=postgresql+psycopg2://postgres:@localhost/news
 
 [visualization]
 TIMEZONE=Europe/Amsterdam
