--- a/config.cfg
+++ b/config.cfg
@@ -15,7 +15,7 @@ SECURITY_TOKEN=cc83733cb0af8b884ff6577086b87909
 
 [database]
 TABLE_PREFIX=fmd
-DATABASE=postgresql+psycopg2://postgres:@localhost/news
+DATABASE=postgresql+psycopg2://postgres:1234@localhost/news
 
 [visualization]
 TIMEZONE=Europe/Amsterdam
