--- a/requirements.txt
+++ b/requirements.txt
@@ -1,48 +1,80 @@
 alembic==1.4.2
 aniso8601==8.0.0
 APScheduler==3.6.3
+arrow==0.15.8
 attrs==19.3.0
+bcrypt==3.1.7
 blinker==1.4
+breadability==0.1.20
 certifi==2020.4.5.1
+cffi==1.14.1
 chardet==3.0.4
 click==7.1.1
 colorhash==1.0.2
 configparser==5.0.0
+docopt==0.6.2
+elasticsearch==7.8.0
 Faker==4.0.2
 Flask==1.1.2
+Flask-Bcrypt==0.7.1
 Flask-Caching==1.8.0
 Flask-Cors==3.0.8
 flask-crontab==0.1.2
+Flask-Googletrans==0.10
 Flask-Limiter==1.2.1
 Flask-Mail==0.9.1
 Flask-Matomo==1.2.0
 Flask-Migrate==2.5.3
 Flask-MonitoringDashboard==3.0.9
+flask-msearch==0.2.9
 flask-restplus==0.13.0
 Flask-Script==2.0.6
 Flask-SQLAlchemy==2.4.1
+googletrans==3.0.0
+h11==0.9.0
+h2==3.2.0
+hpack==3.0.0
+hstspreload==2020.7.22
+httpcore==0.9.1
+httpx==0.13.3
+hyperframe==5.2.0
 idna==2.9
 importlib-metadata==1.6.0
 itsdangerous==1.1.0
 Jinja2==2.11.1
+joblib==0.16.0
 jsonschema==3.2.0
 limits==1.5.1
+lxml==4.5.2
 Mako==1.1.2
 MarkupSafe==1.1.1
+nltk==3.5
 numpy==1.18.2
 psutil==5.7.0
 psycopg2-binary==2.8.5
+pycountry==20.7.3
+pycparser==2.20
 PyJWT==1.7.1
 pyrsistent==0.16.0
 python-dateutil==2.8.1
 python-dotenv==0.12.0
 python-editor==1.0.4
 pytz==2019.3
+redis==3.5.3
+regex==2020.7.14
 requests==2.23.0
+rfc3986==1.4.0
+rq==1.5.0
+rq-dashboard==0.6.1
 sentry-sdk==0.14.3
+shortuuid==1.0.1
 six==1.14.0
+sniffio==1.1.0
 SQLAlchemy==1.3.15
+sumy==0.8.1
 text-unidecode==1.3
+tqdm==4.48.0
+twilio==6.44.1
 tzlocal==2.0.0
 urllib3==1.25.8
 Werkzeug==0.16.1
