--- a/requirements.txt
+++ b/requirements.txt
@@ -4,12 +4,17 @@ APScheduler==3.6.3
 arrow==0.15.8
 attrs==19.3.0
 bcrypt==3.1.7
+beautifulsoup4==4.9.1
+bleach==3.1.5
 blinker==1.4
 breadability==0.1.20
+bs4==0.0.1
 certifi==2020.4.5.1
 cffi==1.14.1
 chardet==3.0.4
+cld2-cffi==0.1.4
 click==7.1.1
+colorgram.py==1.2.0
 colorhash==1.0.2
 configparser==5.0.0
 docopt==0.6.2
@@ -25,7 +30,7 @@ Flask-Limiter==1.2.1
 Flask-Mail==0.9.1
 Flask-Matomo==1.2.0
 Flask-Migrate==2.5.3
-Flask-MonitoringDashboard==3.0.9
+Flask-MonitoringDashboard==3.1.0
 flask-msearch==0.2.9
 flask-restplus==0.13.0
 Flask-Script==2.0.6
@@ -47,14 +52,19 @@ jsonschema==3.2.0
 limits==1.5.1
 lxml==4.5.2
 Mako==1.1.2
+Markdown==3.2.2
 MarkupSafe==1.1.1
+multi-rake==0.0.1
 nltk==3.5
 numpy==1.18.2
+packaging==20.4
+Pillow==7.2.0
 psutil==5.7.0
 psycopg2-binary==2.8.5
 pycountry==20.7.3
 pycparser==2.20
 PyJWT==1.7.1
+pyparsing==2.4.7
 pyrsistent==0.16.0
 python-dateutil==2.8.1
 python-dotenv==0.12.0
@@ -66,10 +76,12 @@ requests==2.23.0
 rfc3986==1.4.0
 rq==1.5.0
 rq-dashboard==0.6.1
+scipy==1.5.2
 sentry-sdk==0.14.3
 shortuuid==1.0.1
 six==1.14.0
 sniffio==1.1.0
+soupsieve==2.0.1
 SQLAlchemy==1.3.15
 sumy==0.8.1
 text-unidecode==1.3
@@ -77,5 +89,6 @@ tqdm==4.48.0
 twilio==6.44.1
 tzlocal==2.0.0
 urllib3==1.25.8
+webencodings==0.5.1
 Werkzeug==0.16.1
 zipp==3.1.0
