--- a/config.cfg
+++ b/config.cfg
@@ -15,7 +15,7 @@ SECURITY_TOKEN=cc83733cb0af8b884ff6577086b87909
 
 [database]
 TABLE_PREFIX=fmd
-DATABASE=postgresql+psycopg2://postgres:Ewenzo#@das67001@localhost/news 
+DATABASE=postgresql+psycopg2://postgres:odaaayAdmin@localhost/news 
 
 [visualization]
 TIMEZONE=Europe/Amsterdam
