--- a/requirements.txt
+++ b/requirements.txt
@@ -36,6 +36,7 @@ flask-restplus==0.13.0
 Flask-Script==2.0.6
 Flask-SQLAlchemy==2.4.1
 googletrans==3.0.0
+gunicorn==20.0.4
 h11==0.9.0
 h2==3.2.0
 hpack==3.0.0
